Live with Ottoman Rose landing page

--- a/home.html
+++ b/home.html
@@ -1,14 +1,16 @@
+
+
 <!DOCTYPE html>
 <html>
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Gulbahar Okuyan</title>
+      <title>Gulbahar (Rose) Okuyan-Waugh</title>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-      <link rel="stylesheet" type="text/css" href="styles/home.css">
-      <!--link rel="stylesheet" type="text/css" href="styles/landing.css"-->
+      <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <link rel="stylesheet" type="text/css" href="styles/landing.css">
       <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-      <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,500&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700i|Poppins:300,400,400i,800,800i" rel="stylesheet">
       <script src="javascript/script.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120968085-1"></script>
@@ -20,156 +22,134 @@
         gtag('config', 'UA-120968085-1');
       </script>
   </head>
-
   <body>
-      <div class="bg-img"><img src="images/ottoman-rose.png"></div>
       <header>
-            <nav>
-                <a href="home.html" class="logo"><h3>gulbahar</h3></a>
-                <ul class="nav-bar" id="topnav">
+              <nav>
+                  <ul class="nav-bar" id="topnav">
                       <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
-                            <i class="fas fa-bars"></i>
-                            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                            <div class="clearfix"></div>
-                            <li><a data scroll href="#projects">WORK</a></li>
-                            <li><a data scroll href="#services">SERVICES</a></li>
-                            <li><a data scroll href="#about">ABOUT</a></li>
-                            <!--li><a href="tools.html">TOOLS & DOODLES</a></li-->
-                            <li><a data scroll href="#contact">CONTACT</a></li>
+                          <i class="fa fa-bars"></i>
+                      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                      <div class="clearfix"></div>
+                      <li><a data scroll href="#projects">work</a></li>
+                      <li><a href="about.html">about</a></li>
+                      <li><a href="mailto:gokuyan@gmail.com">email</a></li>
+                      <li><a href="home.html" style="color: white;">|</a></li>
                       </a>
-                    </ul>
-            </nav>
-            <section class="hero">
-                <div class="hero-text">
-                    <h1>Business Designer & Developer...</h1>
-                    <h3 class="half-left" style="padding: 0;">with an MBA, Innovation Certificate, and Design training. I
-                      have 8+ years’ experience designing & writing proposals and
-                      managing cross-functional teams. Now, I’m freelancing in design
-                      ops, business design, and marketing.</h3>
-                </div>
-            </section>
+                  </ul>
+                  <div class="clearfix"></div>
+                <!--  <a href="img.html">images </a>-->
+              </nav>
+              <section class="hero">
+                <div class="hero-text" id="container">
+                  <h2>Call me <r>Rose</r>.</h2>
+                  <p>
+                  <h1>Business Designer <r>&</r> Developer</h1>
+                  <p>
+                  <p>Based in NYC.
+                    Creative by nature, business strategist & developer by training.
+                    I enjoy helping companies & governments find solutions to better
+                    serve their customers or constituents.</p>
+                  <p>
+                  <a data scroll href="#projects" alt="projects">
+                      <i class="far fa-arrow-alt-circle-down" style="font-size:30px; color:#E44B4B;"></i></a>
+                      <!--div id="intro">
+                          <h5>Hi, my name is <b>Gulbahar</b> - call me G for short or Rose
+                          for translation. I’m a <b>strategist & business developer</b> with ux and web development skills.
+                          Born in NY; currently an MBA student at SDA Bocconi
+                          in Milan, Italy.</h5>
+                          <p>
+                          <h5>Scroll for case studies or <a href="about.html"><u>click here</u></a>.</h5>
+                          <!--<div class="buttons">
+                                <a href="about.html"><button>proper pronunciation</button></a>
+                          </div-->
+                      </div>
+                  </div>
+                  <div class="clearfix"></div>
+              </section>
       </header>
       <main>
-          <section class="projects" id="projects">
-            <div class="clearfix"></div>
-              <div class="left">
-                  <div class="left-text">
-                      <h2>Social Innovation</h2>
-                      <h3 id="project-desc">Co-creating with USAID for grassroots innovation in
-                        financial inclusion in rural areas in Haiti.</h3>
-                      <a href="images/case-haiti.pdf"><h4>See more.</h4></a>
+          <section id="projects">
+              <div id="container">
+
+                  <div class="section" style="background: #e34a4b; color: white;">
+                      <h2 style="padding-bottom:2rem;">8+ years’ in social innovation & nonprofit project design</h2>
+                      <p>
+                      <div class="clearfix"></div>
+                      <div class="project-1">
+                              <a href="images/case-haiti.pdf"><img src="images/digicellbg.png"></a>
+                              <div class="clearfix"></div>
+                      </div>
+                      <div class="project-2">
+                              <p>Combining technology & education to reach the underserved in Haiti.
+                              <p>Client: USAID/Haiti
+                              <p>Dates: 2015-2017
+                              <p><i>While working at <a href="http://www.woccu.org/programs/approach">WOCCU</a>.</i>
+                              <p>
+                          <a href="images/case-haiti.pdf"><button>see case study</button></a>
+                      </div>
+                      <div class="clearfix"></div>
                   </div>
-                  <div class="left-img">
-                      <a href="images/case-haiti.pdf"><img src="images/digicellbg.png"></a>
+                  <div class="section">
+                      <h2 style="padding-bottom:2rem;">+ ux & human-centered design bootcamp & workshops</h2>
+                      <p>
+                      <div class="clearfix"></div>
+                      <div class="project-1">
+                            <a href="rfs.html" class="rfs-image"><img src="images/rfs-etsy.png"></a>
+                              <div class="clearfix"></div>
+                      </div>
+                      <div class="project-2">
+                          <p>Refated Shoes: Helping an artist/entrepreneur get off eBay and onto his own site.
+                          <p>Client: RFS artist
+                          <p>Dates: 2017
+                          <p><i>Project for Bloc bootcamp.</i>
+                          <p><a href="rfs.html"><button>see case study</button></a>
+                      </div>
+                      <div class="clearfix"></div>
                   </div>
-              </div>
-              <div class="right">
-                  <a href="rfs.html" class="rfs-image"><img src="images/rfs-etsy.png"></a>
-                  <div class="right-text">
-                      <h2>Brand Identity</h2>
-                      <h3 id="project-desc">Designing the brand & website for a small
-                        business in Washington, DC</h3>
-                      <a href="rfs.html"><h4>See more.</h4></a>
-                  </div>
-              </div>
-              <div class="left">
-                  <div class="left-text">
-                      <h2>Website Redesign</h2>
-                      <h3 id="project-desc">Creating a brand and website from
-                        scratch. This was part of the Design bootcamp with Bloc.io.</h3>
-                      <a href="coop.html"><h4>See more.</h4></a>
-                  </div>
-                  <a href="coop.html"><img src="images/coop/coop-home.png"></a>
-          </section>
-          <section class="services" id="services">
-              <div class="services-text">
-                  <h1>Services</h1>
-                  <div class="services-wrap">
-                          <div class="half-left" id="list-color">
-                              <h2>Business Development</h2>
-                              <h3>8+ years of experience in...</h3>
-                              <ul class="service-list">
-                                  <li><h3>Partnership Development</h3></li>
-                                  <li><h3>Strategy</h3></li>
-                                  <li><h3>Marketing</h3></li>
-                                  <li><h3>Proposal Writing</h3></li>
-                                  <li><h3>Project Development</h3></li>
-                                  <li><h3>Cross-functional Team Management</h4></li>
-                                  <li><h3>Mentorship & Training</h3></li>
-                              </ul>
-                          </div>
-                          <div class="half-right" id="list-color">
-                              <h2>Business Design & Design Ops</h2>
-                              <h3>Experience designing & developing</h3>
-                              <ul class="service-list">
-                                  <li><h3>Tools (project design & processes)</h3></li>
-                                  <li><h3>Processes</h3></li>
-                                  <li><h3>Forms (internal operations)</h3></li>
-                                  <li><h3>Surveys</h3></li>
-                                  <li><h3>A/B Tests</h3></li>
-                                  <li><h3>Financial Projections</h3></li>
-                                  <li><h3>Websites (UX, UI, front-end)</h3></li>
-                              </ul>
-                          </div>
+                  <div class="section">
+                      <p>
+                      <div class="clearfix"></div>
+                      <div class="project-1">
+                              <a href="coop.html" class="coop-image">
+                                    <img src="images/coop/coop-home.png"></a>
+                            <div class="clearfix"></div>
+                      </div>
+                      <div class="project-2">
+                          <p>COOP: rebranding a sharing platform that makes it easy to share, store, and collaborate.
+                          <p>Dates: 2017
+                          <p><i>Project for Bloc bootcamp.</i>
+                          <p><a href="coop.html"><button>see case study</button></a>
+                              <div class="clearfix"></div>
+                      </div>
+                      <div class="clearfix"></div>
                   </div>
               </div>
           </section>
-          <section class="about" id="about">
-              <div class="about-text">
-                  <div class="half-left">
-                      <h1>Business designer & developer shuffling between NYC & DC.</h1>
-                      <h3>My name is Gulbahar Okuyan, but call me Rose. </h3>
-                      <h3>Born to a Turkistan-American family, I have always been
-                        surrounded by rich, competing cultures. I grew up in Brooklyn
-                        and NJ to a mixture of nomadic ancestry, with farmer and
-                        engineer grandparents, and an architect/ framer father and
-                        artistic mother. All their traits rubbed off on me. I have
-                        lived in 3 countries and traveled to more than 25. And am
-                        constantly redecorating or moving apartments. I enjoy change
-                        and trying new things.</h3>
-                      <img src="images/translation.png">
-                  </div>
-                  <div class="half-right">
-                  <img src="images/face.png">
-                  <h3>Career-wise, I’ve always gravitated towards challenging
-                    roles in resource-poor environments, whether it’s a very
-                    small company/ team or in a developing country. I started
-                    my career managing international monitoring & evaluation
-                    projects then moved more into business development roles
-                    because I enjoyed designing and creating the projects. At
-                    each company transition, I would take on more responsibility,
-                    and thus gain more insight into company operations. This is
-                    when I started taking extra work in design ops and created
-                    manuals, tools, and forms for business development and
-                    internal operations.</h3>
-                  <h3>To further develop my skills in my interests, I signed up
-                    for a design bootcamp then enrolled into an MBA program in
-                    Italy. Now, I’m open for freelance or full-time opportunities
-                    in business development, business design, and/or design ops.</h3>
+
+          <section id="contact">
+              <div class="contact-text">
+                  <h2>Let's chat.</h2>
               </div>
-              </div>
+              <div class="clearfix"></div>
           </section>
       </main>
+      <div class="clearfix"></div>
+
       <footer>
-          <div class="contact" id="contact">
-              <div class="contact-container">
-                  <div class="half-left">
-                      <ul class="icons">
-                            <li><h4>Let's chat.</h4></li>
-                            <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
-                                <i class="fab fa-linkedin-in"></i></a>
-                            </li>
-                            <li><a href="mailto:gokuyan@gmail.com" alt="email me">
-                                <i class="fas fa-envelope"></i></a>
-                            </li>
-                            <li><a href="https://github.com/okleyla" alt="github">
-                                <i class="fab fa-github"></i></a>
-                            </li>
-                      </ul>
-                  </div>
-                  <div class="half-right">
-                      <p>content and design &copy 2019 Gulbahar Okuyan-Waugh</p>
-                  </div>
+          <div class="footer-info">
+              <div class="footer-container">
+                  <ul class="icons">
+                        <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
+                            <i class="fab fa-linkedin-in"></i></a>
+                        </li>
+                        <li><a href="mailto:gokuyan@gmail.com" alt="email me">
+                            <i class="fas fa-envelope"></i></a>
+                        </li>
+                        <li><a href="https://github.com/okleyla" alt="github">
+                            <i class="fab fa-github"></i></a>
+                        </li>
+                  </ul>
+                  <p>content and design &copy 2019 Gulbahar Okuyan-Waugh</p>
               </div>
           </div>
       </footer>
