Updated main.css to include Ottoman Rose

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Gulbahar Okuyan</title>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-      <link rel="stylesheet" type="text/css" href="styles/home.css">
+      <link rel="stylesheet" type="text/css" href="styles/main.css">
       <!--link rel="stylesheet" type="text/css" href="styles/landing.css"-->
       <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
       <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,500&display=swap" rel="stylesheet">
