--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <!--link rel="stylesheet" type="text/css" href="styles/landing.css"-->
       <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+      <link rel="shortcut icon" type="image/png" href="images/favicon-g.png">
       <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,500&display=swap" rel="stylesheet">
       <script src="javascript/script.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
