Added haiti cocreation project with new projects outline.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li><a data scroll href="#projects">WORK</a></li>
                             <li><a data scroll href="#services">SERVICES</a></li>
                             <li><a data scroll href="#about">ABOUT</a></li>
-                            <!--li><a href="tools.html">TOOLS & DOODLES</a></li-->
+                            <li><a href="tools.html">TOOLS & DOODLES</a></li>
                             <li><a data scroll href="#contact">CONTACT</a></li>
                       </a>
                     </ul>
@@ -58,7 +58,7 @@
                       <h2>Social Innovation</h2>
                       <h3 id="project-desc">Co-creating with USAID for grassroots innovation in
                         financial inclusion in rural areas in Haiti.</h3>
-                      <a href="images/case-haiti.pdf"><h4>See more.</h4></a>
+                      <a href="haiti-cocreation.html"><h4>See more.</h4></a>
                   </div>
                   <div class="left-img">
                       <a href="images/case-haiti.pdf"><img src="images/digicellbg.png"></a>
