--- a/tools.html
+++ b/tools.html
@@ -41,74 +41,67 @@
                     </ul>
             </nav>
             <section class="hero">
-                <div class="hero-text">
-                    <h1>Project Title</h1>
-                    <h3 class="half-left" style="padding: 0;">Project description.</h3>
-                </div>
                 <div class="half-right">
-                    <img src="">
+                    <img src="images/face.png">
+                </div>
+                <div class="hero-text">
+                    <h1>Tools & Doodles</h1>
+                    <h3 class="half-left" style="padding: 0;">This page is almost
+                      like my digital notebook that’s filled with tools I’ve
+                      developed, things I’ve drawn, quotes I love, and maybe some
+                      things I’ve written. </h3>
                 </div>
             </section>
       </header>
 
       <main>
-          <section id="process">
-              <div class="half-left">
-                  <h1>Process</h1>
-                  <h3>Process description</h3>
-              </div>
-              <div class="half-right">
-                  <img src="" alt="">
-              </div>
-          </section>
-          <section id="research">
-              <div class="intro-research">
-                  <div class="half-left"
-                      <h1>Research</h1>
-                      <h3>Research process</h3>
-                  </div>
-                  <div class="half-right">
-                      <img src="" alt="">
-                  </div>
-              </div>
-              <div class="left">
-                  <div class="left-text">
-                      <h2>Understanding the client</h2>
-                      <h3>Blah</h3>
-                      <img src="" alt=""><h4>Link somewhere?</h4>
-                  </div>
-              </div>
-              <div class="right">
-                  <img src="" alt="">
-                  <div class="right-text">
-                      <h2>Interviews & Surveys</h2>
-                      <h3>Insights</h3>
-                      <img src="" alt=""><h4>Link to survey questions?</h4>
-                  </div>
-              </div>
-          </section>
-          <section id="prototype">
-              <div class="half-left">
-                  <h1>Prototype</h1>
-                  <h3>Process description</h3>
-              </div>
-              <div class="half-right">
-                  <img src="" alt="">
-              </div>
-          </section>
-          <section id="test">
-              <div class="half-left">
-                  <h1>Testing</h1>
-                  <h3>Process description</h3>
-              </div>
-              <div class="half-right">
-                  <img src="" alt="">
-              </div>
+            <section id="tools">
+                <div class="projects">
+                    <!--h1>Tools</h1-->
+                    <div class="left" style="width: 100%; ">
+                        <div class="half-left" style="transform: skew(-10deg)
+                        rotate(-10deg);">
+                            <h2>Project Development Model Canvas</h2>
+                            <h3>Inspired by the business model canvas, I developed
+                              this one for projects. It helps brainstorm and outline
+                              the project idea, ensuring all angles are covered.</h3>
+                        </div>
+                        <div class="half-right" style="transform: skew(-10deg)
+                        rotate(-10deg);">
+                            <h3>I’ve also used an iteration of it for the Haiti
+                              Co-Creation case.</h3>
+                              <a href="images/proj-dev-canvas.pdf"><h4>See more.</h4></a>
+                        </div>
+                        <!--div class="left-img">
+                            <a href="images/proj-dev-canvas.pdf"><img src="images/proj-dev-canvas.pdf"></a>
+                        </div-->
+                    </div>
+                </div>
+            </section>
+            <section id="doodles">
+                <h1>Doodles & Quotes</h1>
+                <div class="doodles">
+                    <img src="images/coop-chicken.png" class="half-left">
+                    <h3 class="half-right">"Dance first. Think later. It’s the
+                      natural order."     SAMUEL BECKETT</h3>
+                    <img src="images/fall-g.png">
+                    <div class="half-right">
+                        <img src="images/winter-g.png">
+                    </div>
+                    <img src="images/springrose-g.png" style="float:right;">
 
-          </section>
-          <section id="launch">
-
-          </section>
+                    <h3 class="half-right">“You don’t have to behave like people
+                      expect you to.”
+                      RAF SIMMONS</h3>
+                    <img src="images/ok-circ.png">
+                    <div class="half-right">
+                        <img src="images/summer-g.png">
+                    </div>
+                    <img src="images/springgreen-g.png">
+                    <h3 class="half-left">“If you want something you’ve never
+                      had, you have to do something you’ve never done.”</h3>
+                </div>
+            </section>
       </main>
       <footer>
           <div class="contact" id="contact">
