Updated RFS case study to match the new layout. Need to figure out how to put the pie charts side by side.

--- a/haiti-cocreation.html
+++ b/haiti-cocreation.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Gulbahar Okuyan</title>
+      <title>Haiti Co-creation</title>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="styles/normalize.css">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
@@ -40,10 +40,11 @@
                       </a>
                     </ul>
             </nav>
+
             <section class="hero">
                 <div class="hero-text">
                     <h1>Designing financial services to include rural Haitians</h1>
-                    <div class="bg-img"><img src="images/haiti-umbrella.png"></div>
+                    <div class="bg-img" id="shake"><img src="images/haiti-umbrella.png" style="transform: rotate(25deg);"></div>
                     <div class="half-left" style="padding: 0;">
                         <div style="padding-bottom:1rem;">DATES: July 2015 - January 2017
                             <p>MY ROLE: Strategy Lead, Proposal Manager, Client
@@ -77,7 +78,7 @@
                     Finance Activity.</h3>
               </div>
               <div class="half-right">
-                  <img src="" alt="">
+                  <img src="images/afi-cover.png" alt="">
               </div>
           </section>
 
@@ -263,10 +264,11 @@
               </div>
           </section>
           <section id="cases">
-              <div class="case-studies">
-                  <h3>Check out other case studies.</h3>
-                  <a href="rfs.html"><img src="images/rfs-laptop.png" class="half-left"></a>
-                  <a href="coop.html"><img src="images/coop/coop-laptop.png" class="half-right"></a>
+              <div class="half-left">
+                  <h1>Check out other case studies.</h1>
+              </div>
+              <div class="half-right">
+                  <a href="rfs.html"><img src="images/rfs/rfs-laptop.png"></a>
               </div>
           </section>
       </main>
