--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
                   <div class="right-text">
                       <h2>Brand Identity</h2>
                       <h3 id="project-desc">Designing the brand & website for a small
-                        business in Washington, DC</h3>
+                        business in Washington, DC.</h3>
                       <a href="rfs.html"><h4>See more.</h4></a>
                   </div>
               </div>
-              <div class="left">
+              <!--div class="left">
                   <div class="left-text">
                       <h2>Website Redesign</h2>
                       <h3 id="project-desc">Creating a brand and website from
                         scratch. This was part of the Design bootcamp with Bloc.io.</h3>
                       <a href="coop.html"><h4>See more.</h4></a>
                   </div>
-                  <a href="coop.html"><img src="images/coop/coop-home.png"></a>
+                  <a href="coop.html"><img src="images/coop/coop-home.png"></a-->
           </section>
           <section class="services" id="services">
               <div class="services-text">
