Updated image for the rfs case study on home page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </div>
               </div>
               <div class="right">
-                  <a href="rfs.html" class="rfs-image"><img src="images/rfs-etsy.png"></a>
+                  <a href="rfs.html" class="rfs-image"><img src="images/rfs/rfs-etsy.png"></a>
                   <div class="right-text">
                       <h2>Brand Identity</h2>
                       <h3 id="project-desc">Designing the brand & website for a small
