Added fintech case study, updated case study page titles, fixed images for digicel on index and other case study pages.

--- a/haiti-cocreation.html
+++ b/haiti-cocreation.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Haiti Co-creation</title>
+      <title>Case Study: Haiti Co-creation</title>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="styles/normalize.css">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
@@ -44,7 +44,7 @@
             <section class="hero">
                 <div class="hero-text">
                     <h1>Designing financial services to include rural Haitians</h1>
-                    <div class="bg-img" id="shake"><img src="images/haiti-umbrella.png" style="transform: rotate(25deg);"></div>
+                    <div class="bg-img" id="shake"><img src="images/afi-cover.png" style="transform: rotate(25deg);"></div>
                     <div class="half-left" style="padding: 0;">
                         <div style="padding-bottom:1rem;">DATES: July 2015 - January 2017
                             <p>MY ROLE: Strategy Lead, Proposal Manager, Client
@@ -78,7 +78,7 @@
                     Finance Activity.</h3>
               </div>
               <div class="half-right">
-                  <img src="images/afi-cover.png" alt="">
+                  <img src="" alt="">
               </div>
           </section>
 
@@ -268,7 +268,9 @@
                   <h1>Check out other case studies.</h1>
               </div>
               <div class="half-right">
-                  <a href="rfs.html"><img src="images/rfs/rfs-laptop.png"></a>
+                <a href="rfs.html"><img src="images/rfs/rfs-etsy.png" class="" style="width:80%;float:right;"></a>
+                <a href="italy-fintech.html"><img src="images/fintech-paga-cover.png" class="" style="width:80%;float:right;"></a>
+
               </div>
           </section>
       </main>
