--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
                   </div>
               </div>
               <div class="right">
-                  <a href="rfs.html" class="rfs-image"><img src="images/rfs/rfs-etsy.png"></a>
+                  <a href="italy-fintech.html" class="rfs-image"><img src="images/fintech-paga-cover.png"></a>
                   <div class="right-text">
+                      <h2>Digital Strategy</h2>
+                      <h3 id="project-desc">Developing the customer engagement
+                      strategy for an Italian fintech.</h3>
+                      <a href="italy-fintech.html"><h4>See more.</h4></a>
+                  </div>
+              </div>
+              <div class="left">
+                  <div class="left-text">
                       <h2>Brand Identity</h2>
                       <h3 id="project-desc">Designing the brand & website for a small
                         business in Washington, DC.</h3>
                       <a href="rfs.html"><h4>See more.</h4></a>
                   </div>
-              </div>
-              <!--div class="left">
-                  <div class="left-text">
-                      <h2>Website Redesign</h2>
-                      <h3 id="project-desc">Creating a brand and website from
-                        scratch. This was part of the Design bootcamp with Bloc.io.</h3>
-                      <a href="coop.html"><h4>See more.</h4></a>
-                  </div>
-                  <a href="coop.html"><img src="images/coop/coop-home.png"></a-->
+                  <a href="rfs.html" class="rfs-image"><img src="images/rfs/rfs-etsy.png"></a>
           </section>
           <section class="services" id="services">
               <div class="services-text">
