--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,6 @@
       <link rel="stylesheet" type="text/css" href="styles/normalize.css">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <link rel="stylesheet" type="text/css" href="styles/projects.css">
-      <!--link rel="stylesheet" type="text/css" href="styles/landing.css"-->
       <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
       <link rel="shortcut icon" type="image/png" href="images/favicon-g.png">
       <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,500&display=swap" rel="stylesheet">
@@ -32,29 +31,49 @@
                             <i class="fas fa-bars"></i>
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <div class="clearfix"></div>
-                            <li><a data scroll href="#projects">WORK</a></li>
+                            <!--li><a data scroll href="#projects">WORK</a></li>
                             <li><a data scroll href="#services">SERVICES</a></li>
-                            <li><a data scroll href="#about">ABOUT</a></li>
-                            <!--li><a href="tools.html">TOOLS & DOODLES</a></li-->
+                            <li><a data scroll href="#about">ABOUT</a></li-->
+                            <li><a href="tools.html">TOOLS & DOODLES</a></li>
                             <li><a data scroll href="#contact">CONTACT</a></li>
                       </a>
                     </ul>
             </nav>
             <section class="hero">
                 <div class="hero-text">
-                    <h1>Project Title</h1>
-                    <h3 class="half-left" style="padding: 0;">Project description.</h3>
+                    <h1>Title</h1>
+                    <div class="bg-img" id="shake"><img src="images/haiti-umbrella.png" style="transform: rotate(25deg);"></div>
+                    <div class="half-left" style="padding: 0;">
+                        <div style="padding-bottom:1rem;">DATES:
+                            <p>MY ROLE:
+                            <p>
+                        </div>
+                        <h2>Challenge </h2>
+                        <h3></h3>
+                    </div>
                 </div>
                 <div class="half-right">
-                    <img src="">
                 </div>
             </section>
       </header>
 
       <main>
-          <section id="process">
+          <section id="summary">
               <div class="half-left">
-                  <h1>Process</h1>
+                  <h2>Snapshot</h2>
+                  <h3>Description</h3>
+              </div>
+              <div class="half-right">
+                  <img src="images/afi-cover.png" alt="">
+              </div>
+          </section>
+
+          <section id="process">
+              <h2 class="half-left" style="margin-bottom: 0;">Strategy</h2>
+              <div class="half-right">
+
+              </div>
+              <div class="half-left" style="clear:both;">
                   <h3>Process description</h3>
               </div>
               <div class="half-right">
@@ -62,9 +81,11 @@
               </div>
           </section>
           <section id="research">
-              <div class="intro-research">
-                  <div class="half-left"
-                      <h1>Research</h1>
+            <h2 class="half-left" style="margin-bottom: 0;">Research</h2>
+            <div class="half-right">
+
+            </div>
+            <div class="half-left" style="clear:both;">
                       <h3>Research process</h3>
                   </div>
                   <div class="half-right">
@@ -89,27 +110,35 @@
           </section>
           <section id="prototype">
               <div class="half-left">
-                  <h1>Prototype</h1>
+                  <h2>Prototype</h2>
                   <h3>Process description</h3>
               </div>
               <div class="half-right">
                   <img src="" alt="">
               </div>
           </section>
-          <section id="test">
-              <div class="half-left">
-                  <h1>Testing</h1>
-                  <h3>Process description</h3>
-              </div>
-              <div class="half-right">
-                  <img src="" alt="">
-              </div>
 
-          </section>
+
           <section id="launch">
+              <div class="half-left">
+                  <h2>Finalize & Launch</h2>
+                  <h3>Description</h3>
+              </div>
+              <div class="half-right">
+                  <img src="" alt="">
+              </div>
+          </section>
 
+          <section id="cases">
+              <div class="half-left">
+                  <h1>Check out other case studies.</h1>
+              </div>
+              <div class="half-right">
+                  <a href="rfs.html"><img src="images/rfs/rfs-laptop.png"></a>
+              </div>
           </section>
       </main>
+
       <footer>
           <div class="contact" id="contact">
               <div class="contact-container">
