--- a/rfs.html
+++ b/rfs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Refated Shoes</title>
+   <title>Case Study: Refated Shoes</title>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
@@ -361,7 +361,8 @@
                   <h1>Check out other case studies.</h1>
               </div>
               <div class="half-right">
-                  <a href="haiti-cocreation.html"><img src="images/digicellbg.png"></a>
+                  <a href="haiti-cocreation.html"><img src="images/digicellbg.png" class="" style="width:80%;float:right;"></a>
+                  <a href="italy-fintech.html"><img src="images/fintech-paga-cover.png" class="" style="width:80%;float:right;"></a>
               </div>
           </section>
 
